--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-  <div class="header-container">
-    <div class="zone green">Header</div>
-  </div>
+  <nav class="zone green">
+    <ul class="main-nav-items">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Pricing</a></li>
+      <li class="push-right"><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+
 
     <div class="zone red">Cover</div>
     <div class="zone blue">Project Grid</div>
