--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
       <li class="push-right"><a href="#">Contact</a></li>
     </ul>
   </nav>
-
-
-
-    <div class="zone red">Cover</div>
+  <div class="cover-container zone red">Cover!!!</div>
     <div class="zone blue">Project Grid</div>
     <div class="zone yellow">Footer</div>
 
