Added responsive grid.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
     </ul>
   </nav>
   <div class="cover-container zone red">Cover!!!</div>
-    <div class="zone blue">Project Grid</div>
+  <div class="grid-container zone blue">
+    <div class="card zone"><img src="./img/data_storage_2_2.png" alt=""></div>
+    <div class="card zone"><img src="./img/desktop_analytics_2.png" alt=""></div>
+    <div class="card zone"><img src="./img/files_2.png" alt=""></div>
+    <div class="card zone"><img src="./img/monitor_coding_2.png" alt=""></div>
+    <div class="card zone"><img src="./img/monitor_settings_2.png" alt=""></div>
+    <div class="card zone"><img src="./img/server_2_2.png" alt=""></div>
+    <div class="card zone"><img src="./img/server_3.png" alt=""></div>
+    <div class="card zone"><img src="./img/server_safe_2.png" alt=""></div>
+  </div>
+
     <div class="zone yellow">Footer</div>
 
 </body>
