--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-  <nav class="zone green">
+  <nav class="zone green sticky">
     <ul class="main-nav-items">
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
@@ -24,8 +24,6 @@
     <div class="card zone"><img src="./img/server_3.png" alt=""></div>
     <div class="card zone"><img src="./img/server_safe_2.png" alt=""></div>
   </div>
-
-    <div class="zone yellow">Footer</div>
-
+  <footer class="zone yellow">Footer</footer>
 </body>
 </html>
